load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aws_storage_client.go",
        "by_key.go",
        "chunk.go",
        "chunk_cache.go",
        "chunk_store.go",
        "dynamodb_table_client.go",
        "inmemory_storage_client.go",
        "memcache_client.go",
        "schema.go",
        "schema_config.go",
        "schema_util.go",
        "storage_client.go",
        "table_client.go",
        "table_manager.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/awserr:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/request:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/dynamodb:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/dynamodb/dynamodbiface:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3/s3iface:go_default_library",
        "//vendor/github.com/bradfitz/gomemcache/memcache:go_default_library",
        "//vendor/github.com/golang/snappy:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/common/log:go_default_library",
        "//vendor/github.com/prometheus/common/model:go_default_library",
        "//vendor/github.com/prometheus/prometheus/promql:go_default_library",
        "//vendor/github.com/prometheus/prometheus/storage/local/chunk:go_default_library",
        "//vendor/github.com/prometheus/prometheus/storage/metric:go_default_library",
        "//vendor/github.com/weaveworks/common/errors:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
        "//vendor/github.com/weaveworks/common/mtime:go_default_library",
        "//vendor/github.com/weaveworks/common/user:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/golang.org/x/time/rate:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aws_storage_client_test.go",
        "by_key_test.go",
        "chunk_cache_test.go",
        "chunk_store_test.go",
        "chunk_test.go",
        "schema_config_test.go",
        "schema_test.go",
        "schema_util_test.go",
        "table_manager_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//pkg/util:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/awserr:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/request:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/dynamodb:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/dynamodb/dynamodbiface:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3/s3iface:go_default_library",
        "//vendor/github.com/bradfitz/gomemcache/memcache:go_default_library",
        "//vendor/github.com/prometheus/common/log:go_default_library",
        "//vendor/github.com/prometheus/common/model:go_default_library",
        "//vendor/github.com/prometheus/prometheus/storage/local/chunk:go_default_library",
        "//vendor/github.com/prometheus/prometheus/storage/metric:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/github.com/weaveworks/common/mtime:go_default_library",
        "//vendor/github.com/weaveworks/common/test:go_default_library",
        "//vendor/github.com/weaveworks/common/user:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)
