load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "instrumentation.go",
        "storage_client.go",
        "table_client.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/chunk:go_default_library",
        "//vendor/cloud.google.com/go/bigtable:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/dynamodb:go_default_library",
        "//vendor/github.com/grpc-ecosystem/grpc-opentracing/go/otgrpc:go_default_library",
        "//vendor/github.com/mwitkow/go-grpc-middleware:go_default_library",
        "//vendor/github.com/opentracing/opentracing-go:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/api/option:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
    ],
)
